--- a/TravelBuddyApp/package.json
+++ b/TravelBuddyApp/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.3.1",
+    "@supabase/supabase-js": "^2.50.3",
     "axios": "^1.9.0",
     "expo": "~53.0.7",
     "expo-blur": "~14.1.4",
